# dvsfy

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
accounts/: tests.py  urls.py  views.py
accounts/static/css/: landing_page.css
diversify/: apps.py  models.py  tests.py  views.py
dvsfy/: settings.py  urls.py  wsgi.py
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.js  index.js
templates/: index.html
