[tool.poetry]
name = "dvsfy"
version = "0.1.0"
description = "Website for the Diversify playlist generator"
authors = ["Eduardo Macedo <edujtm.soft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "2.2"
psycopg2 = "^2.8.6"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
